Fixed PWA app menu not responding to mouse click on Linux.

Was missing hit testing logic. Fixed by copying hit testing logic from
GlassBrowserFrameView.

Bug: 877363
Test: Open PWA window, click 3-dot menu in top-right of title bar.
Change-Id: I63eff9e34ddedc862de53869f18dd58db9fdc39f
Reviewed-on: https://chromium-review.googlesource.com/1188010
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Alan Cutter <alancutter@chromium.org>
Commit-Queue: Matt Giuca <mgiuca@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586980}
Former-commit-id: 69efb9709a1089a5945d23864115a1c2a6d16a5a